# nginx-rtmp-exporter

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  prometheus.yml
.github/workflows/: deploy.yml
src/: context.rs  main.rs  meta.rs  metrics.rs  xml.rs
test/: stat_xml.xml
