[package]
name = "nginx-rtmp-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
prometheus = "0.13"
quick-xml = { version = "0.23", features = ["serialize"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
warp = "0.3"

[build-dependencies]
vergen = "7"

[dev-dependencies]
serde_path_to_error = "0.1"
