[package]
name = "nginx-rtmp-exporter"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
dotenv = "0.15"
prometheus = "0.13"
quick-xml = { version = "0.23", features = ["serialize"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
warp = "0.3"

[build-dependencies]
vergen = "7"
